--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 				<div class="col-sm-4">
 					<h2>Sobre mí</h2>
 					<h5>Foto mía</h5>
-					<div class="img"> Imagen real</div>
+
 					<img src="yo.png" id="imagen"/>
+
 					<p>Hola, me llamo Victor Sotoj y soy una persona muy cuiriosa y que vive por las nuevas experiencias :D</p>
 					<h3 class="mt-4">Algunos Enlaces</h3>
 					<p>Próximamente ve</p>
@@ -73,13 +74,17 @@
 				<div class="col-sm-8">
 					<h2>LO QUE ME GUSTA HACER</h2>
 					<h5>Me gusta jugar videojuegos</h5>
-					<div class="fakeimg">Imagen Falsa</div>
+
+                    <img src="videojuego.png" alt="Videojuegos favoritos"/>
+
 					<p>Por qué los videojuegos?</p>
 					<p>Me gusta jugar videojuegos porque encuentro un escape de la realidad, me hacen sentir libre, me puedo expresar sin reprecuciones y conecto muchísimo más con mis amigos :D</p>
 
 					<h2>MI CANTANTE FAV</h2>
 					<h5>BRUSES</h5>
-					<div class="fakeimg">Imagen Falsa</div>
+
+					<img src="bruses.png" alt="Foto de Bruses"/>
+
 					<p>Nacida después del coma</p>
 					<p>Bruses, un enigma por todos lados, es conocida, más no RECONOCIDA por sus éxitos. Ella es una cantante muy alternativa, muy random, y eso está bn. Siempre se tú mismo, sin importar a quienes ofendas, pero no seas maluco para la gente.</p>		
 				</div>
